--- a/style.css
+++ b/style.css
@@ -1,96 +1,139 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #7c7ae9;
-  font-family: 'Roboto', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
+  font-family: 'Lato', sans-serif;
+  background-color: #333;
+  color: #222;
   overflow-x: hidden;
+  margin: 0;
 }
 
-a {
-    text-decoration: none;
-}
-h1 {
-  margin: 10px;
+.logo-mini {
+  height: 60px;
+  width: 60px;
+  vertical-align: middle;
+  margin-right: 10px;
 }
 
-.box {
-  background-color: steelblue;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 400px;
+.container {
+  background-color: #fafafa;
+  transform-origin: top left;
+  transition: transform 0.5s linear;
+  width: 100vw;
+  min-height: 100vh;
+  padding: 20px 50px;
+}
+
+.container.show-nav {
+  transform: rotate(-20deg);
+}
+
+.circle-container {
+  position: fixed;
+  top: -100px;
+  left: -100px;
+}
+
+.circle {
+  background-color: #ff7979;
   height: 200px;
-  margin: 10px;
-  border-radius: 10px;
-  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
-  transform: translateX(400%);
-  transition: transform 0.4s ease;
+  width: 200px;
+  border-radius: 50%;
+  position: relative;
+  transition: transform 0.5s linear;
 }
 
-.box:nth-of-type(even) {
-  transform: translateX(-400%);
+.container.show-nav .circle {
+  transform: rotate(-70deg);
 }
 
-.box.show {
+.circle button {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100px;
+  background: transparent;
+  border: 0;
+  font-size: 26px;
+  color: #fff;
+}
+
+.circle button:focus {
+  outline: none;
+}
+
+.circle button#open {
+  left: 60%;
+}
+
+.circle button#close {
+  top: 60%;
+  transform: rotate(90deg);
+  transform-origin: top left;
+}
+
+.container.show-nav + nav li {
   transform: translateX(0);
+  transition-delay: 0.3s;
 }
 
-.box h2 {
-  font-size: 45px;
-  text-align: center;
+nav ul {
+  list-style-type: none;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
 
-.rose {
-  background-color: rgb(255, 163, 250);
+nav ul li {
+  text-transform: uppercase;
+  color: gray;
+  margin-left: 20px;
 }
 
-.purple {
-  background-color: rgb(170, 84, 223);
+nav ul li.order-btn, nav ul li.order-btn a {
+  color: green;
 }
 
-.magenta {
-  background-color: rgb(248, 55, 219);
+nav ul li i {
+  font-size: 20px;
+  margin-right: 10px;
 }
 
-.aqua {
-  background-color: rgb(101, 231, 215);
+nav a {
+  color: gray;
+  text-decoration: none;
+  transition: all 0.5s;
 }
 
-.red {
-  background-color: rgb(242, 0, 0);
+nav a:hover {
+  color: #333;
 }
 
-.orange {
-  background-color: rgb(254, 142, 72);
+.content img {
+  max-width: 100%;
 }
 
-.lime {
-  background-color: rgb(171, 233, 47);
+.content {
+  max-width: 1000px;
+  margin: 0px auto 50px;
 }
 
-.yellow {
-  background-color: rgb(227, 233, 50);
+.content h1 {
+  margin: 0;
 }
 
-.green {
-  background-color: rgb(28, 186, 28);
+.content small {
+  color: #555;
+  font-style: italic;
 }
 
-.blue {
-  background-color: rgb(52, 52, 215);
+.content p {
+  color: #333;
+  line-height: 1.5;
 }
-
-.brown {
-  background-color: rgb(113, 51, 51);
-}
- 
