--- a/style.css
+++ b/style.css
@@ -137,3 +137,33 @@ nav a:hover {
   color: #333;
   line-height: 1.5;
 }
+
+.profile-container {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  margin-bottom: 50px;
+}
+
+.profile-pic {
+  height: 200px;
+  width: 200px;
+}
+.profile-desc {
+  padding: 0 20px;
+}
+@media only screen and (max-width: 900px) {
+  .container {
+    padding: 20px;
+  }
+  nav ul {
+    justify-content: start;
+  }
+  .profile-container {
+    flex-direction: column;
+  }
+  .profile-desc {
+    margin-top: 20px;
+    padding: 0;
+  }
+}
