--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ nav ul li {
   margin-left: 20px;
 }
 
+nav ul li.current, nav ul li.current a {
+  color: #333;
+  font-weight: bold;
+}
+
 nav ul li.order-btn, nav ul li.order-btn a {
   color: green;
 }
@@ -142,7 +147,6 @@ nav a:hover {
   display: flex;
   flex-direction: row;
   padding: 20px;
-  margin-bottom: 50px;
 }
 
 .profile-pic {
@@ -158,6 +162,11 @@ nav a:hover {
   }
   nav ul {
     justify-content: start;
+    padding-left: 0;
+  }
+  nav ul li {
+    margin-right: 20px;
+    margin-left: 0;
   }
   .profile-container {
     flex-direction: column;
